_sass/_layout.scss
%button {
  display: block;
  font-family: $heading-font-family;
  font-size: ms(1);
  padding: $spacing-unit / 2;
  margin: $spacing-unit / 2 0;
  background-color: $orange-color;
  color: $background-color;
  text-decoration: none;
  -webkit-appearance: none;
  border: none;
}

.site-header {
  position: relative;
  z-index: 1;
  text-align: center;
}

.site-header:before {
  content : "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity : 0.8;

  background-image: url("/assets/thewright-audience.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  z-index: 5;
}

.site-title  {
  display: inline-block;
  position: relative;
  width: 50%;
  margin: $spacing-unit * 2 auto;
  padding: $spacing-unit;
  background-color: $background-color;
  z-index: 10;

  @include media-query($on-palm) {
    width: calc(80% - (#{$spacing-unit} * 2));
    width: -webkit-calc(80% - (#{$spacing-unit} * 2));
  }
}

.site-social {
  position: relative;
  float: right;
  text-align: right;
  padding-right: $spacing-unit;

  @include media-query($on-palm) {
    float: none;
    text-align: center;
    padding-top: $spacing-unit / 2;
  }

  a {
    font-size: ms(-3);
    margin: 0 $spacing-unit 0 0;
    color: $background-color;

    @include media-query($on-palm) {
      margin: 0 $spacing-unit / 2;
    }
  }
}

.site-tagline {
  position: sticky;
  top: 0;
  z-index: 1000;
  text-align: center;
  text-transform: uppercase;
  background-color: $navy-color;
  color: $background-color;
  font-size: ms(3);
  font-family: $heading-font-family;
  font-weight: $heading-font-weight;
  padding: $spacing-unit / 2 0;
}

/**
 * Site nav
 */

.site-nav {
  padding: $spacing-unit / 3 0;
  background-color: $orange-color;
}

.site-nav ul {
  list-style-type: none;
  margin: auto;
  padding: 0;
  text-align: center;
  display: flex;
  justify-content: space-between;
}

.site-nav li {
  display: inline-block;
}

.site-nav li a {
  font-size: ms(1);
  font-family: $heading-font-family;
  font-weight: $heading-font-weight;
  margin: 1em;
  color: $background-color;
}


/**
 * Content sections
 */

.content-section {
  margin: $spacing-unit auto $spacing-unit * 2 auto;

  &.intro, &.contenders {
    text-align: center;

    iframe {
      margin: $spacing-unit auto;
    }
  }
}

.content-section-header {
  width: 100%;
  color: $background-color;
  background-color: $navy-color;
  text-align: center;
  padding: $spacing-unit / 2 0;
  font-size: ms(4);
  font-family: $heading-font-family;
  font-weight: $heading-font-weight;

  a, a:hover {
    color: inherit;
    text-decoration: none;
  }
}

/**
 * E-mail form
 */

.email-form {
  margin: $spacing-unit auto auto auto;
  text-align: center;
  width: 70%;

  @include media-query($on-palm) {
    margin: auto 0;
    width: 100%;
  }
}

.email-form .form-header {
  font-size: ms(2);
  margin: 0;
}

.email-form form {
  margin: auto 0;
}

// These two come from Mailchimp's horizontal-slim default styling
.mc-field-group {
  display: inline-block;
}

#mc_embed_signup .clear {
  display: inline-block;
}

.email-form input[type="email"] {
  font-family: $heading-font-family;
  font-size: ms(1);
  padding: $spacing-unit / 2;
  margin: $spacing-unit / 2 0;
  background-color: $grey-color;
  color: $background-color;
  text-decoration: none;
  -webkit-appearance: none;
  border: none;
  width: calc(100% - #{$spacing-unit});
  width: -webkit-calc(100% - #{$spacing-unit});

  &:focus, &::placeholder {
    color: inherit;
  }
}

.email-form input[type="submit"] {
  @extend %button;
  width: 100%;
}

/**
 * Artist profiles
 */

.artists-container {
  padding: $spacing-unit 0;
  margin: auto;
  text-align: center;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;

  @include media-query($on-palm) {
    margin: auto 0;
    width: 100%;
  }
}

.artist-cell {
  margin-bottom: $spacing-unit;
}

.artist-photo {
  width: 50%;
  margin: 0;
  padding: 0;
  float: left;

  @include media-query($on-palm) {
    width: 100%;
  }
}

.artist-cell:nth-child(even) .artist-photo {
  float: right;
}

.artist-cell:nth-child(odd) .artist-photo {
  float: left;
}

.artist-description {
  margin: 0;
  padding: $spacing-unit / 2;
  font-size: ms(0);
  width: -webkit-calc(50% - (#{$spacing-unit}));
  width:         calc(50% - (#{$spacing-unit}));

  @include media-query($on-palm) {
    width: -webkit-calc(100% - (#{$spacing-unit}));
    width:         calc(100% - (#{$spacing-unit}));
  }
}

.artist-cell:nth-child(even) .artist-description {
  float: left;
}

.artist-cell:nth-child(odd) .artist-description {
  float: right;
}

.artist-tagline {
  font-style: italic;
  font-size: ms(0);
  margin-bottom: $spacing-unit / 2;
}

/**
 * Partners
 */

.partner-si-logo {
  margin: $spacing-unit auto;
  width: 33%;
  text-align: center;
  filter: grayscale(100%);

  @include media-query($on-palm) {
    width: 50%;
  }
}

.partner-logos {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  a {
    width: -webkit-calc(33% - (#{$spacing-unit}));
    width:         calc(33% - (#{$spacing-unit}));
    margin: $spacing-unit / 2 $spacing-unit / 2;
    text-align: center;
    vertical-align: middle;
  }

  @include media-query($on-palm) {
    a {
      width: -webkit-calc(60% - (#{$spacing-unit}));
      width:         calc(60% - (#{$spacing-unit}));
    }
  }

  img {
    filter: grayscale(100%) opacity(75%);
    width: 70%;
  }
}

/**
 * Participants
 */

.participant-grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  .participant-headshot {
    margin: $spacing-unit / 2 $spacing-unit / 2;
    text-align: center;
    vertical-align: middle;
    width: calc(25% - (#{$spacing-unit} * 2));
    width: -webkit-calc(25% - (#{$spacing-unit} * 2));
    font-size: ms(-1);
    font-style: italic;
    line-height: 1;
  }

  @include media-query($on-palm) {
    .participant-headshot {
      width: calc(50% - (#{$spacing-unit} * 2));
      width: -webkit-calc(50% - (#{$spacing-unit} * 2));
    }
  }

  .participant-name {
    margin-bottom: $spacing-unit / 6;
  }

  img {
    filter: grayscale(100%);
    border-radius: 50%;
    width: 70%;
    margin-bottom: $spacing-unit / 3;
  }
}

.disclaimer {
  font-size: ms(-1);
  font-style: italic;
  line-height: 1;
}

.social-button {
  display: block;
  margin: $spacing-unit / 2 auto;
}

.calendar-button, .calendar-button:hover, .calendar-button:active, .calendar-button:visited {
  @extend %button;
  width: 50%;
  text-align: center;

  @include media-query($on-palm) {
    width: 80%;
  }

  i {
    margin-right: $spacing-unit / 2;
  }
}

.cta-button, .cta-button:hover, .cta-button:visited {
  @extend %button;
  margin: $spacing-unit;
}

.location-image {
  width: 100%;
  height: 50vh;
  background-image: url('/assets/golden-arch-large.jpg');
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  filter: grayscale(100%);
}

.contenders-image {
  width: 100%;
  height: 50vh;
  background-image: url('/assets/thewright-rapidgrass.jpg');
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  filter: grayscale(100%);
}

